[gd_scene load_steps=5 format=4 uid="uid://bg2p00k5uvee0"]

[ext_resource type="Script" path="res://Scripts/Levels/ShopRoom.gd" id="1_gr70q"]
[ext_resource type="TileSet" uid="uid://dcy4xc7kldp64" path="res://Scenes/Levels/Map TileSet.tres" id="1_ki43j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ex5tb"]
size = Vector2(245, 232)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nku8e"]
size = Vector2(20, 24)

[node name="ShopRoom" type="Node2D"]
script = ExtResource("1_gr70q")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD3//f/AAAAAAMAAAD3//j/AAAAAAMAAAD3//n/AAAAAAMAAAD3//r/AAAAAAMAAAD3//v/AAAAAAMAAAD3//z/AAAAAAMAAAD3//3/AAAAAAMAAAD3//7/AAAAAAMAAAD3////AAAAAAMAAAD3/wAAAAAAAAMAAAD3/wEAAAAAAAMAAAD3/wIAAAAAAAMAAAD3/wMAAAAAAAMAAAD3/wQAAAAAAAMAAAD3/wUAAAAAAAMAAAD3/wYAAAAAAAMAAAD3/wcAAAAAAAMAAAD3/wgAAAAAAAMAAAD4//f/AAAAAAMAAAD4//j/AAABAAMAAAD4//n/AAABAAAAAAD4//r/AAABAAAAAAD4//v/AAABAAAAAAD4//z/AAABAAAAAAD4//3/AAABAAAAAAD4//7/AAABAAAAAAD4////AAABAAAAAAD4/wAAAAABAAAAAAD4/wEAAAABAAAAAAD4/wIAAAABAAAAAAD4/wMAAAABAAAAAAD4/wQAAAABAAAAAAD4/wUAAAABAAAAAAD4/wYAAAABAAAAAAD4/wcAAAAAAAIAAAD4/wgAAAAAAAMAAAD5//f/AAAAAAMAAAD5//j/AAADAAAAAAD5//n/AQAKAAEAAAD5//r/AQAKAAEAAAD5//v/AQAKAAEAAAD5//z/AQAKAAEAAAD5//3/AQAKAAEAAAD5//7/AQAKAAEAAAD5////AQAKAAEAAAD5/wAAAQAKAAEAAAD5/wEAAQAKAAEAAAD5/wIAAQAKAAEAAAD5/wMAAQAKAAEAAAD5/wQAAQAKAAEAAAD5/wUAAQAKAAEAAAD5/wYAAQAKAAEAAAD5/wcAAAABAAIAAAD5/wgAAAAAAAMAAAD6//f/AAAAAAMAAAD6//j/AAADAAAAAAD6//n/AQAKAAEAAAD6//r/AQAKAAEAAAD6//v/AQAKAAEAAAD6//z/AQAKAAEAAAD6//3/AQAKAAEAAAD6//7/AQAKAAEAAAD6////AQAKAAEAAAD6/wAAAQAKAAEAAAD6/wEAAQAKAAEAAAD6/wIAAQAKAAEAAAD6/wMAAQAKAAEAAAD6/wQAAQAKAAEAAAD6/wUAAQAKAAEAAAD6/wYAAQAKAAEAAAD6/wcAAAABAAIAAAD6/wgAAAAAAAMAAAD7//f/AAAAAAMAAAD7//j/AAADAAAAAAD7//n/AQAKAAEAAAD7//r/AQAKAAEAAAD7//v/AQAKAAEAAAD7//z/AQAKAAEAAAD7//3/AQAKAAEAAAD7//7/AQAKAAEAAAD7////AQAKAAEAAAD7/wAAAQAKAAEAAAD7/wEAAQAKAAEAAAD7/wIAAQAKAAEAAAD7/wMAAQAKAAEAAAD7/wQAAQAKAAEAAAD7/wUAAQAKAAEAAAD7/wYAAQAKAAEAAAD7/wcAAAABAAIAAAD7/wgAAAAAAAMAAAD8//f/AAAAAAMAAAD8//j/AAADAAAAAAD8//n/AQAKAAEAAAD8//r/AQAKAAEAAAD8//v/AQAKAAEAAAD8//z/AQAKAAEAAAD8//3/AQAKAAEAAAD8//7/AQAKAAEAAAD8////AQAKAAEAAAD8/wAAAQAKAAEAAAD8/wEAAQAKAAEAAAD8/wIAAQAKAAEAAAD8/wMAAQAKAAEAAAD8/wQAAQAKAAEAAAD8/wUAAQAKAAEAAAD8/wYAAQAKAAEAAAD8/wcAAAABAAIAAAD8/wgAAAAAAAMAAAD9//f/AAAAAAMAAAD9//j/AAADAAAAAAD9//n/AQAKAAEAAAD9//r/AQAKAAEAAAD9//v/AQAKAAEAAAD9//z/AQAIAAAAAAD9//3/AQAIAAEAAAD9//7/AQAIAAEAAAD9////AQAIAAEAAAD9/wAAAQAIAAMAAAD9/wEAAQAKAAEAAAD9/wIAAQAKAAEAAAD9/wMAAQAKAAEAAAD9/wQAAQAKAAEAAAD9/wUAAQAKAAEAAAD9/wYAAQAKAAEAAAD9/wcAAAABAAIAAAD9/wgAAAAAAAMAAAD+//f/AAAAAAMAAAD+//j/AAADAAAAAAD+//n/AQAKAAEAAAD+//r/AQAKAAEAAAD+//v/AQAKAAEAAAD+//z/AQAKAAAAAAD+//3/AQAJAAIAAAD+//7/AQAJAAIAAAD+////AQAMAAwAAAD+/wAAAQAJAAMAAAD+/wEAAQAKAAEAAAD+/wIAAQAKAAEAAAD+/wMAAQAKAAEAAAD+/wQAAQAKAAEAAAD+/wUAAQAKAAEAAAD+/wYAAQAKAAEAAAD+/wcAAAABAAIAAAD+/wgAAAAAAAMAAAD///f/AAAAAAMAAAD///j/AAAKAAAAAAD///n/AQAKAAEAAAD///r/AQAIAAAAAAD///v/AQAIAAEAAAD///z/AQAFAAEAAAD///3/AQAJAAIAAAD///7/AQAJAAIAAAD/////AQAJAAIAAAD//wAAAQAFAAIAAAD//wEAAQAIAAEAAAD//wIAAQAIAAEAAAD//wMAAQAIAAEAAAD//wQAAQAIAAEAAAD//wUAAQAIAAMAAAD//wYAAQAKAAEAAAD//wcAAAALAAMAAAD//wgAAAAAAAMAAAAAAPf/AAAAAAMAAAAAAPj/AAALAAAAAAAAAPn/AQAAAAAAAAAAAPr/AQAJAAAAAAAAAPv/AQAJAAIAAAAAAPz/AQAJAAIAAAAAAP3/AQAJAAIAAAAAAP7/AQAJAAIAAAAAAP//AQAJAAIAAAAAAAAAAQAJAAIAAAAAAAEAAQAJAAIAAAAAAAIAAQAJAAIAAAAAAAMAAQAJAAIAAAAAAAQAAQAJAAIAAAAAAAUAAQAKAAMAAAAAAAYAAQAAAAIAAAAAAAcAAAAMAAMAAAAAAAgAAAAAAAMAAAABAPf/AAAAAAMAAAABAPj/AAAMAAAAAAABAPn/AQAKAAEAAAABAPr/AQALAAAAAAABAPv/AQALAAIAAAABAPz/AQAGAAEAAAABAP3/AQAMAAwAAAABAP7/AQAJAAIAAAABAP//AQAJAAIAAAABAAAAAQAGAAIAAAABAAEAAQALAAIAAAABAAIAAQALAAIAAAABAAMAAQALAAIAAAABAAQAAQALAAIAAAABAAUAAQALAAMAAAABAAYAAQAKAAEAAAABAAcAAAANAAMAAAABAAgAAAAAAAMAAAACAPf/AAAAAAMAAAACAPj/AAADAAAAAAACAPn/AQAKAAEAAAACAPr/AQAKAAEAAAACAPv/AQAKAAEAAAACAPz/AQAKAAAAAAACAP3/AQAJAAIAAAACAP7/AQAMAAwAAAACAP//AQAJAAIAAAACAAAAAQAJAAMAAAACAAEAAQAKAAEAAAACAAIAAQAKAAEAAAACAAMAAQAKAAEAAAACAAQAAQAKAAEAAAACAAUAAQAKAAEAAAACAAYAAQAKAAEAAAACAAcAAAABAAIAAAACAAgAAAAAAAMAAAADAPf/AAAAAAMAAAADAPj/AAADAAAAAAADAPn/AQAKAAEAAAADAPr/AQAKAAEAAAADAPv/AQAKAAEAAAADAPz/AQALAAAAAAADAP3/AQALAAIAAAADAP7/AQALAAIAAAADAP//AQALAAIAAAADAAAAAQALAAMAAAADAAEAAQAKAAEAAAADAAIAAQAKAAEAAAADAAMAAQAKAAEAAAADAAQAAQAKAAEAAAADAAUAAQAKAAEAAAADAAYAAQAKAAEAAAADAAcAAAABAAIAAAADAAgAAAAAAAMAAAAEAPf/AAAAAAMAAAAEAPj/AAADAAAAAAAEAPn/AQAKAAEAAAAEAPr/AQAKAAEAAAAEAPv/AQAKAAEAAAAEAPz/AQAKAAEAAAAEAP3/AQAKAAEAAAAEAP7/AQAKAAEAAAAEAP//AQAKAAEAAAAEAAAAAQAKAAEAAAAEAAEAAQAKAAEAAAAEAAIAAQAKAAEAAAAEAAMAAQAKAAEAAAAEAAQAAQAKAAEAAAAEAAUAAQAKAAEAAAAEAAYAAQAKAAEAAAAEAAcAAAABAAIAAAAEAAgAAAAAAAMAAAAFAPf/AAAAAAMAAAAFAPj/AAADAAAAAAAFAPn/AQAKAAEAAAAFAPr/AQAKAAEAAAAFAPv/AQAKAAEAAAAFAPz/AQAKAAEAAAAFAP3/AQAKAAEAAAAFAP7/AQAKAAEAAAAFAP//AQAKAAEAAAAFAAAAAQAKAAEAAAAFAAEAAQAKAAEAAAAFAAIAAQAKAAEAAAAFAAMAAQAKAAEAAAAFAAQAAQAKAAEAAAAFAAUAAQAKAAEAAAAFAAYAAQAKAAEAAAAFAAcAAAABAAIAAAAFAAgAAAAAAAMAAAAGAPf/AAAAAAMAAAAGAPj/AAADAAAAAAAGAPn/AQAKAAEAAAAGAPr/AQAKAAEAAAAGAPv/AQAKAAEAAAAGAPz/AQAKAAEAAAAGAP3/AQAKAAEAAAAGAP7/AQAKAAEAAAAGAP//AQAKAAEAAAAGAAAAAQAKAAEAAAAGAAEAAQAKAAEAAAAGAAIAAQAKAAEAAAAGAAMAAQAKAAEAAAAGAAQAAQAKAAEAAAAGAAUAAQAKAAEAAAAGAAYAAQAKAAEAAAAGAAcAAAABAAIAAAAGAAgAAAAAAAMAAAAHAPf/AAAAAAMAAAAHAPj/AAADAAAAAAAHAPn/AQAKAAEAAAAHAPr/AQAKAAEAAAAHAPv/AQAKAAEAAAAHAPz/AQAKAAEAAAAHAP3/AQAKAAEAAAAHAP7/AQAKAAEAAAAHAP//AQAKAAEAAAAHAAAAAQAKAAEAAAAHAAEAAQAKAAEAAAAHAAIAAQAKAAEAAAAHAAMAAQAKAAEAAAAHAAQAAQAKAAEAAAAHAAUAAQAKAAEAAAAHAAYAAQAKAAEAAAAHAAcAAAABAAIAAAAHAAgAAAAAAAMAAAAIAPf/AAAAAAMAAAAIAPj/AAAAAAAAAAAIAPn/AAADAAIAAAAIAPr/AAADAAIAAAAIAPv/AAADAAIAAAAIAPz/AAADAAIAAAAIAP3/AAADAAIAAAAIAP7/AAADAAIAAAAIAP//AAADAAIAAAAIAAAAAAADAAIAAAAIAAEAAAADAAIAAAAIAAIAAAADAAIAAAAIAAMAAAADAAIAAAAIAAQAAAADAAIAAAAIAAUAAAADAAIAAAAIAAYAAAADAAIAAAAIAAcAAAADAAMAAAAIAAgAAAAAAAMAAAAJAPf/AAAAAAMAAAAJAPj/AAAAAAMAAAAJAPn/AAAAAAMAAAAJAPr/AAAAAAMAAAAJAPv/AAAAAAMAAAAJAPz/AAAAAAMAAAAJAP3/AAAAAAMAAAAJAP7/AAAAAAMAAAAJAP//AAAAAAMAAAAJAAAAAAAAAAMAAAAJAAEAAAAAAAMAAAAJAAIAAAAAAAMAAAAJAAMAAAAAAAMAAAAJAAQAAAAAAAMAAAAJAAUAAAAAAAMAAAAJAAYAAAAAAAMAAAAJAAcAAAAAAAMAAAAJAAgAAAAAAAMAAAA=")
tile_set = ExtResource("1_ki43j")
metadata/_edit_lock_ = true

[node name="SpawnPoints" type="Node2D" parent="."]

[node name="ShopSpawn" type="Marker2D" parent="SpawnPoints"]
position = Vector2(8, -27)

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2(8, 0)
shape = SubResource("RectangleShape2D_ex5tb")

[node name="RoomEnter" type="Marker2D" parent="."]
position = Vector2(8, 104)

[node name="RoomExit" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoomExit"]
position = Vector2(8, -116)
shape = SubResource("RectangleShape2D_nku8e")

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_entered" from="RoomExit" to="." method="_on_room_exit_body_entered"]
